attached_assets/Pasted-env-load-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SECRET-EXPO-PUBLIC-1753102878577_1753102878578.txt
env: load .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_API_URL EXPO_PUBLIC_REPLIT_URL
Starting Metro Bundler
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓░░░░░░░ 61.0% (454/588)
iOS Bundling failed 3535ms node_modules/expo-router/entry.js (822 modules)
SyntaxError: /Users/expo/workingdir/build/node_modules/react-native/index.js: Missing semicolon. (313:1)

[0m [90m 311 |[39m   }[33m,[39m
 [90m 312 |[39m   [90m// #endregion[39m
[31m[1m>[22m[39m[90m 313 |[39m } [36mas[39m [33mReactNativePublicAPI[39m[33m;[39m
 [90m     |[39m  [31m[1m^[22m[39m
 [90m 314 |[39m
 [90m 315 |[39m [36mif[39m (__DEV__) {
 [90m 316 |[39m   [90m/* $FlowFixMe[prop-missing] This is intentional: Flow will error when[39m[0m
SyntaxError: SyntaxError: /Users/expo/workingdir/build/node_modules/react-native/index.js: Missing semicolon. (313:1)

[0m [90m 311 |[39m   }[33m,[39m
 [90m 312 |[39m   [90m// #endregion[39m
[31m[1m>[22m[39m[90m 313 |[39m } [36mas[39m [33mReactNativePublicAPI[39m[33m;[39m
 [90m     |[39m  [31m[1m^[22m[39m
 [90m 314 |[39m
 [90m 315 |[39m [36mif[39m (__DEV__) {
 [90m 316 |[39m   [90m/* $FlowFixMe[prop-missing] This is intentional: Flow will error when[39m[0m
SyntaxError: /Users/expo/workingdir/build/node_modules/react-native/index.js: Missing semicolon. (313:1)

[0m [90m 311 |[39m   }[33m,[39m
 [90m 312 |[39m   [90m// #endregion[39m
[31m[1m>[22m[39m[90m 313 |[39m } [36mas[39m [33mReactNativePublicAPI[39m[33m;[39m
 [90m     |[39m  [31m[1m^[22m[39m
 [90m 314 |[39m
 [90m 315 |[39m [36mif[39m (__DEV__) {
 [90m 316 |[39m   [90m/* $FlowFixMe[prop-missing] This is intentional: Flow will error when[39m[0m
    at constructor (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:367:19)
    at FlowParserMixin.raise (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6627:19)
    at FlowParserMixin.semicolon (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6923:10)
    at FlowParserMixin.parseExpressionStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13285:10)
    at FlowParserMixin.parseExpressionStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:2968:18)
    at FlowParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12899:19)
    at FlowParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at FlowParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:2946:24)
    at FlowParserMixin.parseModuleItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12744:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:36)
    at FlowParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at FlowParserMixin.parseProgram (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12625:10)
    at FlowParserMixin.parseTopLevel (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12615:25)
    at FlowParserMixin.parseTopLevel (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:3715:28)
    at FlowParserMixin.parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14492:10)
    at parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14505:26)
    at parser (/Users/expo/workingdir/build/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at parse (/Users/expo/workingdir/build/node_modules/@babel/core/lib/parse.js:25:37)
    at parse.next (<anonymous>)
    at evaluateSync (/Users/expo/workingdir/build/node_modules/gensync/index.js:251:28)
    at sync (/Users/expo/workingdir/build/node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (/Users/expo/workingdir/build/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at parseSync (/Users/expo/workingdir/build/node_modules/@babel/core/lib/parse.js:40:72)
    at Object.transform (/Users/expo/workingdir/build/node_modules/metro-react-native-babel-transformer/src/index.js:210:11)
    at transformJSWithBabel (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:470:47)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:585:12)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/transform-worker.js:175:23)
    at transformFile (/Users/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:57:36)
    at Object.transform (/Users/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:33:10)
    at execFunction (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:149:17)
    at execHelper (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:137:5)
    at execMethod (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:140:5)
    at process.messageListener (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:44:7)
    at process.emit (node:events:524:28)
    at emit (node:internal/child_process:950:14)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
